@@ -13,6 +13,13 @@ What's New in astroid 4.1.2?
 ============================
 Release date: TBA
 
+* Fix ``DuplicateBasesError`` crash in dataclass transform when a class has
+  duplicate bases in its MRO (e.g., ``Protocol`` appearing both directly and
+  indirectly). Catch ``MroError`` at ``.mro()`` call sites in
+  ``brain_dataclasses.py``, consistent with the existing pattern elsewhere.
+
+  Closes #2628
+
 * Catch ``MemoryError`` when inferring f-strings with extremely large format
   widths (e.g. ``f'{0:11111111111}'``) so that inference yields ``Uninferable``
   instead of crashing.
